tests/ui/basic/compare_different_types.rs
use metamatch::eval;

// Compare different types
fn main() {
    eval! {
        5 == "5"
    };
}
